router/apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@supergraph_apq_to_apq.router.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
supergraph: {}
apq:
  router:
    cache:
      in_memory:
        limit: 2000
      redis:
        urls:
          - "http://example.com"

