router/apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@telemetry_otlp_timeout.router.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
telemetry:
  tracing:
    otlp:
      endpoint: default
      batch_processor:
        max_export_timeout: 5s
      enabled: true

